Fixed bug on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,7 @@ body {
 #main-dimmer {
     background-color: rgba(69, 93, 88,0.85);
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     z-index: 0;
 }
